--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<%= link_to "<< Back to the Articles >>", articles_path%>
+<%= link_to "<< Back to the Articles >>", articles_path %>
+<br>
+<%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Readly delete me? "} %>
+<br>
+<%= link_to "Edit Me", edit_article_path(@article) %>
