--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,3 +8,5 @@
 </ul>
 <br>
 <%= link_to "Create new Article", new_article_path %>
+<br>
+<%= link_to "All Tags", tags_path, :class => "xx second after" %>
