--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@article, html: {multipart: true}) do |f| %>
+<%= form_for @article, html: {multipart: true} do |f| %>
   <ul>
   <% @article.errors.full_messages.each do |error| %>
     <li><%= error %></li>
@@ -18,7 +18,7 @@
   </p>
   <p>
     <%= f.label :image, "Attach image file" %>
-    <%= f.file_field :image, multiple: true %>
+    <%= f.file_field :image %>
   </p>
   <p>
     <%= f.submit %>
