--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
 
   <body>
   	<p class="flash"><%= flash.notice %></p>
-    <%= yield %>
+    <div id="container">
+      <div id="content">
+        <%= yield %>
+        <hr>
+        <h6>
+          <% if logged_in? %>
+            <%= "logged in as #{current_user.email}" %>
+            <%= link_to "(logout)", logout_path %>
+          <% else %>
+            Logged Out
+            <%= link_to "(Login)", login_path %>
+          <% end %>
+        </h6>
+      </div>
+    </div>
+    
   </body>
 </html>
